<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".settings.ProfileActivity"
    android:background="@color/colorBackground"
    >
    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_pwd"
        android:padding="5dp"
        android:textSize="15dp"
        />
    <EditText
        android:id="@+id/passwordNew1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_new1"
        android:textSize="15dp"
        android:layout_below="@id/dialog_title"
        />

    <EditText
        android:id="@+id/passwordNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_new"
        android:textSize="15dp"
        android:layout_below="@id/passwordNew1"
        />
    <Button
        android:id="@+id/dialog_positive_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_alignParentRight="true"
        android:background="@drawable/custom_button2"
        android:layout_below="@id/passwordNew"
        />
    <Button
        android:id="@+id/dialog_negative_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_toLeftOf="@id/dialog_positive_btn"
        android:background="@drawable/custom_button2"
        android:layout_marginRight="3dp"
        android:layout_alignBaseline="@id/dialog_positive_btn"
        />
</RelativeLayout>