<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.rest.ProfileActivity"
    android:background="@color/colorBackground"
    >
    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_change"
        android:padding="5dp"
        android:textSize="15dp"
        />

    <RadioGroup
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_title">

        <RadioButton
            android:id="@+id/check_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_title"
            android:text="@string/en"/>

        <RadioButton
            android:id="@+id/check_de"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/check_en"
            android:text="@string/de"/>


    </RadioGroup>



    <Button
        android:id="@+id/dialog_positive_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_alignParentRight="true"
        android:background="@drawable/custom_button2"
        android:layout_below="@id/group"
        />
    <Button
        android:id="@+id/dialog_negative_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_toLeftOf="@id/dialog_positive_btn"
        android:background="@drawable/custom_button2"
        android:layout_marginRight="3dp"
        android:layout_alignBaseline="@id/dialog_positive_btn"
        />


</RelativeLayout>