<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login"
    tools:context=".ui.login.LoginActivity">


    <TextView
        android:id="@+id/viewEmail"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="5dp"
        android:textColor="#ffffff"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/email" />

    <EditText
        android:id="@+id/inMail"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:textColorHint="#999999"
        android:textColor="#ffffff"
        android:ems="10" />

    <TextView
        android:id="@+id/viewPass"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="5dp"
        android:textColor="#ffffff"
        android:text="@string/pass" />


    <EditText
        android:id="@+id/inPass"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:textColorHint="#999999"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonSign"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_button2"
        android:text="@string/button_login" />

    <Button
        android:id="@+id/buttonReg"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button2"
        android:text="@string/button_register" />

    <ProgressBar
        android:id="@+id/load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true" />

</LinearLayout>