<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.admin.AdminUserDetailActivity"
    android:background="@drawable/background_color">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/show_admin_details_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#8FB4DE"
        android:elevation="4dp"
        android:theme="@style/AppTheme"
        android:visibility="visible"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <!--New-->
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp"
        android:text="@string/admin_fname" />

    <EditText
        android:id="@+id/fname_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp"
        android:text="@string/admin_lname" />

    <EditText
        android:id="@+id/lname_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:inputType="text" />

    <CheckBox android:id="@+id/admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_checkbox" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"
            android:text="@string/button_save"
            android:background="@drawable/custom_button2"/>

    </LinearLayout>



</LinearLayout>