<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:orientation="vertical"
    tools:context=".ui.thread.ThreadAddActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/thread_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#8FB4DE"
        android:elevation="4dp"
        android:theme="@style/AppTheme"
        android:visibility="visible"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp"
        android:text="@string/thread" />


    <EditText
        android:id="@+id/add_thread"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp"
        android:text="@string/category" />

    <EditText
        android:id="@+id/add_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:inputType="text" />



    <Button
        android:id="@+id/save_add_thread"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/custom_button2"
        android:text="@string/add" />

</LinearLayout>