<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.post.PostAddActivity"
    android:background="@drawable/background_color">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_post_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#8FB4DE"
        android:elevation="4dp"
        android:theme="@style/AppTheme"
        android:visibility="visible"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <!--New-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:text="@string/submitter" />

        <EditText
            android:id="@+id/submitter_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:text="@string/text" />

        <EditText
            android:id="@+id/text_in"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:ems="10"
            android:inputType="text" />


    </LinearLayout>

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:padding="5dp"
        android:background="@drawable/custom_button2"
        android:text="@string/add"/>

</LinearLayout>